--- a/js-features/countdown/task.html
+++ b/js-features/countdown/task.html
@@ -23,6 +23,7 @@
             <div id="status">
                 До окончания конкурса осталось секунд: <span id="timer">59</span>
             </div>
+            <a href="#" download target="_blank"></a>
         </div>
     </main>    
     <script src="task.js"></script>
