--- a/client-state/auth/task.html
+++ b/client-state/auth/task.html
@@ -35,7 +35,10 @@
                 </form>
             </div>
             <div class="welcome" id="welcome">
-                Добро пожаловать, пользователь #<span id="user_id"></span>
+                Добро пожаловать, пользователь #<span id="user_id"></span><br></br>
+                <div class="row">
+                    <button class="btn" id="unsignin__btn">Выйти</button>
+                </div>
             </div>
         </div>
         </main>
